--- a/ProductsAPI/ProductsAPI.csproj
+++ b/ProductsAPI/ProductsAPI.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -12,6 +12,12 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ProductsAPI.Common\ProductsAPI.Common.csproj" />
+    <ProjectReference Include="..\ProductsAPI.DataAccess\ProductsAPI.DataAccess.csproj" />
+    <ProjectReference Include="..\ProductsAPI.Models\ProductsAPI.Models.csproj" />
   </ItemGroup>
 
 </Project>
