--- a/ProductsAPI/appsettings.json
+++ b/ProductsAPI/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "ProductsDb": "Server=192.168.1.17;Database=NodeDB;user id=skeltadbusr; password=skelta@123;TrustServerCertificate=true;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
