--- a/ProductsAPI/appsettings.json
+++ b/ProductsAPI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "ProductsDb": "Server=192.168.1.17;Database=NodeDB;user id=skeltadbusr; password=skelta@123;TrustServerCertificate=true;"
+     "ProductsDb": "Server=(localdb)\\mssqllocaldb;Database=ProductsDB;Trusted_Connection=True;"
   },
   "Logging": {
     "LogLevel": {
